--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -99,13 +99,52 @@
     "# Exercise 2 (In Your Own Words)\n",
     "\n",
     "1. What is a Git **repository**\n",
-    "   - I would say its like a save hub"
+    "   - I would say its like a save hub for any code that you do in jupyter notebook such that any changes you have made can be saved there and tracked.\n",
+    "2. Git keeps tracks of ____BLANK____ in the files in our repository.\n",
+    "   - Git keeps track of coding changes in the files in our repository\n",
+    "3. What is a **commit**?\n",
+    "   - A commit is when you make a save on the changes that you've done in jupyter notebook in your file\n",
+    "4. What is a **push**?\n",
+    "   - A push is when you send your committed code file to GitHub itself\n",
+    "5. What is a **pull**?\n",
+    "   - A pull is when you draw back that code file from GitHub back onto your desktop.  A pull request also merges any changes you or a team member has made since the file was last pushed into GitHub.\n",
+    "6. What is the difference between **GitHub** and **GitHub Desktop**?\n",
+    "   - GitHub is almost like iCloud and GitHub Desktop is the iCloud App that allows you to access that cloud save."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b74193a8-b4ed-4e7a-bcb1-bfcebb3c88f9",
+   "metadata": {},
+   "source": [
+    "# Exercise 3 (A Matter of Statistics)\n",
+    "\n",
+    "$$\n",
+    " \\mu = \\dfrac{1}{n}\\sum_{i=1}^{n}x_i\n",
+    " $$\n",
+    "\n",
+    " $$\n",
+    " \\sigma = \\sqrt{\\dfrac{1}{n}\\sum_{i=1}^{n}(x_i-\\mu)^2}\n",
+    " $$\n",
+    "\n",
+    " $$\n",
+    " \\gamma = \\dfrac{\\sum_{i=1}^{n}(x_i-\\mu_x)(y_i-\\mu_y)}{\\sqrt{\\sum_{i=1}^{n}(x_i-\n",
+    " \\mux)^2\\sum_{i=1}^{n}(y_i-\\mu_y)^2}}\n",
+    " $$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a70ffe0-d1d8-48cc-a039-07d6b51e4f5e",
+   "id": "17a5ef7c-daa3-4eaa-9dfe-f5ffd6150a39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f499855-f81e-4895-a772-8891b32b8e83",
    "metadata": {},
    "outputs": [],
    "source": []
