--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -128,8 +128,8 @@
     " $$\n",
     "\n",
     " $$\n",
-    " \\gamma = \\dfrac{\\sum_{i=1}^{n}(x_i-\\mu_x)(y_i-\\mu_y)}{\\sqrt{\\sum_{i=1}^{n}(x_i-\n",
-    " \\mux)^2\\sum_{i=1}^{n}(y_i-\\mu_y)^2}}\n",
+    " \\gamma = \\dfrac{\\sum_{i=1}^{n}(x_i-\\mu X)(y_i-\\mu Y)}{\\sqrt{\\sum_{i=1}^{n}(x_i-\n",
+    " \\mu X)^2\\sum_{i=1}^{n}(y_i-\\mu Y)^2}}\n",
     " $$"
    ]
   },
