--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -80,9 +80,9 @@
    "id": "e565178b-5097-4d86-8dd1-26d0acee6075",
    "metadata": {},
    "source": [
-    "#Discriminant\n",
+    "# Discriminant\n",
     "\n",
-    "The quantity $\\triangle = b^2-4ac$ is called the **discrimninant** of the equation and decides the nature of its solutions.  The table below shows the various possibilities.\n",
+    "The quantity $\\triangle = b^2-4ac$ is called the **discriminant** of the equation and decides the nature of its solutions.  The table below shows the various possibilities.\n",
     "\n",
     "|Discriminant|Roots|\n",
     "|:---|---:|\n",
