--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "|Discriminant|Roots|\n",
     "|:---|---:|\n",
-    "|$\\triangle=b^2-4ac=0$|a single solution of|*-b/(2a)*|\n",
+    "|$\\triangle=b^2-4ac=0$|a single solution of $ -b/(2a) $\n",
     "|$\\triangle=b^2-4ac \\gt 0$|two distinct solutions|\n",
     "|$\\triangle=b^2-4ac \\lt 0$|no real solutions;both are complex|"
    ]
@@ -101,11 +101,11 @@
     "1. What is a Git **repository**\n",
     "   - I would say its like a save hub for any code that you do in jupyter notebook such that any changes you have made can be saved there and tracked.\n",
     "2. Git keeps tracks of ____BLANK____ in the files in our repository.\n",
-    "   - Git keeps track of coding changes in the files in our repository\n",
+    "   - Git keeps track of coding changes in the files in our repository.\n",
     "3. What is a **commit**?\n",
-    "   - A commit is when you make a save on the changes that you've done in jupyter notebook in your file\n",
+    "   - A commit is when you make a save on the changes that you've done in jupyter notebook in your file.\n",
     "4. What is a **push**?\n",
-    "   - A push is when you send your committed code file to GitHub itself\n",
+    "   - A push is when you send your committed code file to GitHub itself.\n",
     "5. What is a **pull**?\n",
     "   - A pull is when you draw back that code file from GitHub back onto your desktop.  A pull request also merges any changes you or a team member has made since the file was last pushed into GitHub.\n",
     "6. What is the difference between **GitHub** and **GitHub Desktop**?\n",
