--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "|Discriminant|Roots|\n",
     "|:---|---:|\n",
-    "|$\\triangle=b^2-4ac=0$|a single solution of $ -b/(2a) $\n",
+    "|$\\triangle=b^2-4ac=0$|a single solution of $ -b/(2a) $ |\n",
     "|$\\triangle=b^2-4ac \\gt 0$|two distinct solutions|\n",
     "|$\\triangle=b^2-4ac \\lt 0$|no real solutions;both are complex|"
    ]
