--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -19,7 +19,7 @@
     "2. Python is an interpreter and interprets one line at a time. If there is an error, it will stop interpreting and let you know there's an error un your command\n",
     "3. Python is sensitive to caps, e.g. print('Hello'} will work but not Print('Hello')\n",
     "4. Python is sensitive to spaces\n",
-    "5. ( ) is used for functions, [ ] is used in mathematical questions, { } is used to create a dictionary where you can pull info from\n",
+    "5. ( ) is used for functions, [ ] is used to input data, { } is used to create a dictionary where you can pull info from\n",
     "6. = is different from ==. = means equating two things together, == is asking a question\n",
     "7. \"if\" is to make a decision\n",
     "8. For mathematical equations like \"sqrt\", need to import either numpy or math into Python.  They only have to be installed once.\n",
@@ -29,6 +29,14 @@
     "12. *'hello' is a word, hello is a variable*\n",
     "    \n",
     "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ecd9b70-4ae6-4473-a48f-263c6b7912fc",
+   "metadata": {},
+   "source": [
+    "### Exericse 2"
    ]
   },
   {
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "e37f3c13-8abb-4c47-88d1-d75bb2feed6b",
    "metadata": {},
    "outputs": [],
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "167aac85-b85c-47d7-8c09-0410fb4b8691",
    "metadata": {},
    "outputs": [
@@ -95,9 +103,10 @@
     "\n",
     "y=4\n",
     "\n",
-    "z= math.sqrt(x**2+y**2)\n",
+    "z= numpy.sqrt(x**2+y**2)  #added a missing asterix to the x  variable to complete the square function\n",
+    "                         #removed indentations in front of the z variable equation   \n",
     "\n",
-    "print(x,y,z)\n"
+    "print(x,y,z) #removed indentations infront of the print function, why is there a '.0' behind my answer?\n"
    ]
   },
   {
@@ -110,9 +119,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07331be8-d15b-4c77-bd0b-5a0bc59341e3",
+   "metadata": {},
+   "source": [
+    "|  # | Term         | Description                                                                                                                 |   |   |\n",
+    "|:--:|--------------|-----------------------------------------------------------------------------------------------------------------------------|---|---|\n",
+    "|  1 | Function     | A set of instructions that python interprets                                                                                |   |   |\n",
+    "|  2 | Arguments    | Arguments are the exact details of the instructions that you want python to do                                              |   |   |\n",
+    "|  3 | Comments     | A line of text used for clarification that is not code                                                                      |   |   |\n",
+    "|  4 | Indentations | Adding a 'space' in front of the start of your code line that messes it up                                                  |   |   |\n",
+    "|  5 | Packages     | Additional tools that you can download that help Python carry out more tasks e.g. math and numpy for mathematical equations |   |   |\n",
+    "|  6 | .            | Used to show which instruction is directed to who                                                                           |   |   |\n",
+    "|  7 | :            | Used as part of an ;if; statement to say what to do when True or False                                                      |   |   |\n",
+    "|  8 | []           | Used to input and record data                                                                                               |   |   |\n",
+    "|  9 | [[],[]]      | To make two rows of data                                                                                                    |   |   |\n",
+    "| 10 | {}           | Used to store data in a savebank where you can choose to pull out certain information using print(                          |   |   |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66b11c6e-a70b-439d-a519-f5c462b9f8ea",
+   "metadata": {},
+   "source": [
+    "### Exercise 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "eec98f54-e100-4bb4-953c-dc02066e9266",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5/2)  #use the print function, followed by the equation in the brackets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4372f417-830c-4f02-b052-1c6213e27865",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5//2) #same as the previous one but this time it rounds off the divided value to the nearest integer, hence giving me 2\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "260d2b2d-59ce-47de-b0bc-808fcef6ddea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5%2) #uses the print function as well, but this time it gives me the integer remainder of the division equation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc89fee7-bd2d-4349-ba2f-1ee70e3b049f",
+   "id": "5258d213-053e-451e-bfda-5274a35cad2b",
    "metadata": {},
    "outputs": [],
    "source": []
