--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -107,18 +107,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "029df6d9-dd25-4e25-b462-c483adb313ff",
+   "cell_type": "markdown",
+   "id": "1390e6c8-402a-4688-bf6f-54a7903a5aa8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "name ='laura'"
+    "### Task 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "63aa918c-4484-4d35-89c1-852bbd73feba",
    "metadata": {},
    "outputs": [
@@ -143,12 +141,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f45acbb1-28d5-43ae-ab2d-4c482af9fff8",
+   "metadata": {},
+   "source": [
+    "### Task 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "753c08a9-fe5f-4848-8689-d53d964c9369",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your name? Laura\n",
+      "What is your age? 21\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'My name is \u001b[1mLAURA!\u001b[0m and I am \u001b[1m21\u001b[0m years old!\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input1 = input('What is your name?')\n",
+    "user_input2 = input('What is your age?')\n",
+    "print(f\"'My name is \\033[1m{user_input1.upper()}!\\033[0m and I am \\033[1m{user_input2}\\033[0m years old!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b2781d49-dae0-4c5a-a309-febf6f7d0dd9",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pi = 3.141592653589793"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3b03aedb-1b20-4bf2-9a4a-7e9ab5a526d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{pi:.2f}\")  #remember to add both : and . before the number of decimal places you want, \" goes outside the }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "74e49ddc-ea9a-49e8-a60e-149177f2a832",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.142\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{pi:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b5cafe06-8bde-4248-b442-85156902032a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1416\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{pi:.4f}\")"
+   ]
   }
  ],
  "metadata": {
