--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -10,107 +10,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "082e34b2-74c7-43dd-bcee-ad388f2f9fb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "animals=[ 'cat', 'dog', 'cow', 'sheep' ]\n",
-    "furniture=[ 'chair', 'table', 'sofa', 'closet' ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "21da8dc7-6628-4a6f-be90-a6be5f1e8b21",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'cat' in animals  #this is a question"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "06a7b3f6-9f62-4e88-9e7c-4a92520b8861",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'chair' in furniture"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "66fea1f8-d0c4-4394-9835-225ecb7c5723",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'ca' in 'cat'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "9468f4b2-17c3-408b-bd6c-f445394ad385",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=0.1\n",
-    "a3=0.3\n",
-    "a*3==a3\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1390e6c8-402a-4688-bf6f-54a7903a5aa8",
    "metadata": {},
    "source": [
+    "## Exercise 1\n",
     "### Task 1"
    ]
   },
@@ -177,6 +81,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc732a78-5648-499f-aa7a-34bd56e54765",
+   "metadata": {},
+   "source": [
+    "### Task 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "b2781d49-dae0-4c5a-a309-febf6f7d0dd9",
@@ -239,6 +151,84 @@
    "source": [
     "print(f\"{pi:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c85fbe1-7f5e-42f8-bc83-3684325bd6c4",
+   "metadata": {},
+   "source": [
+    "### Task 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25e68596-aee5-42ed-9d42-07e64c263d1c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f2eaf4d9-4752-4d26-8a37-cec72392ce22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple     $0.99\n",
+      "Banana    $0.59\n",
+      "Orange    $1.29\n"
+     ]
+    }
+   ],
+   "source": [
+    "text1='Apple'\n",
+    "text2='$0.99'\n",
+    "text3='Banana'\n",
+    "text4='$0.59'\n",
+    "text5='Orange'\n",
+    "text6='$1.29'\n",
+    "print (f'{text1}{text2:>10}\\n{text3}{text4:>9}\\n{text5}{text6:>9}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edf95047-9ca0-4685-9a81-31c6c91723de",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "150b28dd-a779-4912-8821-981fda969007",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (459600138.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[47], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    if input == <=70:\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input1 = input(\"Enter the student's score.\")\n",
+    "if input == <=70:\n",
+    "    print(\"The student's score is: A\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07c4d50f-2c0c-4fda-bf33-65406b149936",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
