--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -202,30 +202,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "id": "150b28dd-a779-4912-8821-981fda969007",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (459600138.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[47], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    if input == <=70:\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the student's score. 85\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's score is: A\n",
+      "The student's score is: D\n"
      ]
     }
    ],
    "source": [
-    "user_input1 = input(\"Enter the student's score.\")\n",
-    "if input == <=70:\n",
+    "user_input1 = int(input(\"Enter the student's score.\"))\n",
+    "if 70<=user_input1<=100:\n",
     "    print(\"The student's score is: A\")\n",
-    "\n"
+    "elif 50<=user_input1<=69:\n",
+    "    print(\"The student's score is: B\")\n",
+    "elif 35<=user_input1<=49:\n",
+    "    print(\"The student's score is: C\")\n",
+    "else: 0<=user_input1<=34\n",
+    "print(\"The student's score is: D\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b595ac8d-f2a5-4336-8214-cdf5c1fa6f34",
+   "metadata": {},
+   "source": [
+    "## Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "e29fa235-abab-4761-87d2-54613480ca6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter value of n 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def factorial(n):\n",
+    "    if n < 0:\n",
+    "        return \"Invalid input\"\n",
+    "    elif n!= 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        result = 1\n",
+    "        for number in range(1, n+1):\n",
+    "            result == number\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "8f5ed36f-00b8-48d3-bbf2-b914370c4049",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(factorial(5))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07c4d50f-2c0c-4fda-bf33-65406b149936",
+   "id": "180e33d3-371b-47c9-bfc9-9ecb690612c2",
    "metadata": {},
    "outputs": [],
    "source": []
