--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -244,50 +244,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e29fa235-abab-4761-87d2-54613480ca6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def factorial(n):\n",
-    "    #n=input('Enter your number')\n",
-    "    if n < 0:\n",
-    "        return \"Invalid input\"\n",
-    "    elif n==0:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        result==1\n",
-    "        for number in range(1, n+1):\n",
-    "            result == number\n",
-    "        return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8f5ed36f-00b8-48d3-bbf2-b914370c4049",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'result' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mfactorial\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[6], line 8\u001b[0m, in \u001b[0;36mfactorial\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mresult\u001b[49m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m number \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, n\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m     10\u001b[0m         result \u001b[38;5;241m==\u001b[39m number\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'result' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(factorial(5))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "id": "180e33d3-371b-47c9-bfc9-9ecb690612c2",
    "metadata": {},
@@ -305,7 +261,7 @@
     "def factorial(n):\n",
     "    if n < 0:     #changed > to < as n cannot be negative in factorial\n",
     "        return \"Invalid input\"\n",
-    "    elif n == 0 or n==1: #changed != to == as n will always equal zero ore more. There are two scenarios where n!=1, hence added both \n",
+    "    elif n == 0 or n==1: #changed != to == as n will always equal zero or more. There are two scenarios where n!=1, hence added both \n",
     "        return 1\n",
     "    else:\n",
     "        result = 1\n",
@@ -317,14 +273,6 @@
     "print(factorial(5))   # Testing, expected output: 120\n",
     "print(factorial(-1))  # Testing, expected output: Invalid input"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "391f97cd-c925-4fa5-b200-08512d0e72b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
