--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -160,21 +160,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "id": "ced7bab5-7afb-4844-8b5d-a1973d862798",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1   4   9  16  25  36  49  64  81 100]\n"
+     ]
+    }
+   ],
    "source": [
     "x_1 = [1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n",
     "x_2 = [1, 8, 27, 64, 125, 216, 343, 512, 729, 1000]\n",
     "\n",
     "np_array_1 = np.array(x_1)\n",
-    "np_array_2 = np.array(x_2)"
+    "np_array_2 = np.array(x_2)\n",
+    "print(np_array_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "id": "279fc77c-c5db-4f2c-8d40-9f1c3dd70663",
    "metadata": {},
    "outputs": [
@@ -188,8 +197,8 @@
     }
    ],
    "source": [
-    "mean1=float(np.mean(x_1))\n",
-    "mean2=float(np.mean(x_2))\n",
+    "mean1=float(np.mean(np_array_1))\n",
+    "mean2=float(np.mean(np_array_2))\n",
     "\n",
     "print(mean1,type(mean1))\n",
     "print(mean2,type(mean2))\n",
@@ -198,13 +207,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 58,
    "id": "e995ae08-05cb-47b5-9c20-6b68d22d7b33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.41990129534635\n",
+      "326.0893282522444\n"
+     ]
+    }
+   ],
    "source": [
-    "S1 = np.std(x_1)\n",
-    "S2 = np.std(x_2)"
+    "S1 = np.std(np_array_1)\n",
+    "S2 = np.std(np_array_2)\n",
+    "print(S1)\n",
+    "print(S2)\n"
    ]
   },
   {
@@ -223,8 +243,8 @@
     }
    ],
    "source": [
-    "sum1=int(np.sum(x_1))\n",
-    "sum2=int(np.sum(x_2))\n",
+    "sum1=int(np.sum(np_array_1))\n",
+    "sum2=int(np.sum(np_array_2))\n",
     "\n",
     "print(sum1, type(sum1))\n",
     "print(sum2, type(sum2))"
@@ -232,57 +252,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "d07c9fbf-6fc3-4218-be38-38234f726085",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  1167.83333333,  11595.83333333],\n",
-       "       [ 11595.83333333, 118149.16666667]])"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    " np.cov(x_1, x_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f809572d-d902-4160-9839-607eff0879bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "3f5c349f-bc3f-4655-a250-73ee1724644b",
+   "execution_count": 91,
+   "id": "0c3f3e94-c4aa-4b15-a7b9-acffa22b877d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  11746.42648378  116634.45448967]\n",
-      " [ 116634.45448967 1188380.61969751]]\n"
+      "10436.25\n"
      ]
     }
    ],
    "source": [
-    "print(V/np.std(x_1)*np.std(x_2))"
+    "covariance=np.mean((np_array_1 - mean1)*(np_array_2 - mean2))\n",
+    "print(covariance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "d8bc2bfc-3fb8-411f-b541-63962aaf2b27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.98717966])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covariance/[(S1)*(S2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "293ddf60-50e5-4456-9ac1-d616b4793073",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.98717966],\n",
+       "       [0.98717966, 1.        ]])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(np_array_1, np_array_2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad603a70-5dfe-4cad-923a-d6055952a77e",
+   "id": "87cb467e-bb62-4524-9010-38967bf6ca98",
    "metadata": {},
    "outputs": [],
    "source": []
