--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -17,14 +17,14 @@
     "### Exercise 1 (Total Recall)\n",
     "1. Functions such as print\n",
     "2. Python is an interpreter and interprets one line at a time. If there is an error, it will stop interpreting and let you know there's an error un your command\n",
-    "3. Python is sensitive to caps, e.g. print('Hello'} will work but not Print('Hello')\n",
+    "3. Python is sensitive to caps, e.g. print('Hello') will work but not Print('Hello')\n",
     "4. Python is sensitive to spaces\n",
     "5. ( ) is used for functions, [ ] is used to input data, { } is used to create a dictionary where you can pull info from\n",
-    "6. = is different from ==. = means equating two things together, == is asking a question\n",
+    "6. = is different from ==. = means equating two things together, == is asking a question about whether 2 things are equal.\n",
     "7. \"if\" is to make a decision\n",
     "8. For mathematical equations like \"sqrt\", need to import either numpy or math into Python.  They only have to be installed once.\n",
     "9. Numpy and math packages both have their unique points, e.g. using numpy you can sqrt multiple numbers\n",
-    "10. \".\" is used to separate words in a sentence, does not work on numbers\n",
+    "10. \".\" is used to indicate ownership, allowing us to access certain functions like numpy or split()\n",
     "11. *to add comments, add # in front of the sentence*\n",
     "12. *'hello' is a word, hello is a variable*\n",
     "    \n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "e37f3c13-8abb-4c47-88d1-d75bb2feed6b",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "167aac85-b85c-47d7-8c09-0410fb4b8691",
    "metadata": {},
    "outputs": [
@@ -94,19 +94,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 4 5.0\n"
+      "3 4 5\n"
      ]
     }
    ],
    "source": [
-    "x=3\n",
+    "x,y = 3,4\n",
     "\n",
-    "y=4\n",
-    "\n",
-    "z= numpy.sqrt(x**2+y**2)  #added a missing asterix to the x  variable to complete the square function\n",
-    "                         #removed indentations in front of the z variable equation   \n",
-    "\n",
-    "print(x,y,z) #removed indentations infront of the print function, why is there a '.0' behind my answer?\n"
+    "z= int(numpy.sqrt(x**2+y**2))  #added a missing asterix to the x  variable to complete the square function\n",
+    "                         #removed indentations in front of the z variable equation  \n",
+    "print(x,y,z)"
    ]
   },
   {
@@ -128,13 +125,13 @@
     "|  1 | Function     | A set of instructions that python interprets                                                                                |   |   |\n",
     "|  2 | Arguments    | Arguments are the exact details of the instructions that you want python to do                                              |   |   |\n",
     "|  3 | Comments     | A line of text used for clarification that is not code                                                                      |   |   |\n",
-    "|  4 | Indentations | Adding a 'space' in front of the start of your code line that messes it up                                                  |   |   |\n",
+    "|  4 | Indentations | Adding a 'space' in front of the start of your code line that messes it up, also used by Python to seperate 'True' and 'False' outputs                                                  |   |   |\n",
     "|  5 | Packages     | Additional tools that you can download that help Python carry out more tasks e.g. math and numpy for mathematical equations |   |   |\n",
     "|  6 | .            | Used to show which instruction is directed to who                                                                           |   |   |\n",
-    "|  7 | :            | Used as part of an ;if; statement to say what to do when True or False                                                      |   |   |\n",
-    "|  8 | []           | Used to input and record data                                                                                               |   |   |\n",
-    "|  9 | [[],[]]      | To make two rows of data                                                                                                    |   |   |\n",
-    "| 10 | {}           | Used to store data in a savebank where you can choose to pull out certain information using print(                          |   |   |"
+    "|  7 | :            | Used as part of an ;if; statement to say what to do when True or False, also used to designate a block of code                                                      |   |   |\n",
+    "|  8 | []           | Used to input and record 1D data                                                                                               |   |   |\n",
+    "|  9 | [[],[]]      | To make 2D data\n",
+    "| 10 | {}           | Used to store data in a dictionary where you can choose to pull out certain information using print(                          |   |   |"
    ]
   },
   {
@@ -167,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "4372f417-830c-4f02-b052-1c6213e27865",
    "metadata": {},
    "outputs": [
@@ -175,19 +172,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "2.0\n"
      ]
     }
    ],
    "source": [
-    "print(5//2) #same as the previous one but this time it rounds off the divided value to the nearest integer, hence giving me 2\n",
-    "\n",
+    "print(5//2) #same as the previous one but this time it gives me the quotient to the division\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "260d2b2d-59ce-47de-b0bc-808fcef6ddea",
    "metadata": {},
    "outputs": [
@@ -200,8 +196,16 @@
     }
    ],
    "source": [
-    "print(5%2)  #uses the print function as well, but this time it gives me the integer remainder of the division equation"
+    "print(5%2)  #uses the print function as well, but this time it gives me the remainder of the division equation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02aea522-941c-427d-9551-15e32400904f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
