--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "id": "150b28dd-a779-4912-8821-981fda969007",
    "metadata": {},
    "outputs": [
@@ -210,28 +210,31 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the student's score. 85\n"
+      "Enter the student's score. 86\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The student's score is: A\n",
-      "The student's score is: D\n"
+      "The student's letter grade is: A\n"
      ]
     }
    ],
    "source": [
     "user_input1 = int(input(\"Enter the student's score.\"))\n",
+    "grade = user_input1\n",
     "if 70<=user_input1<=100:\n",
-    "    print(\"The student's score is: A\")\n",
+    "    grade=\"A\"\n",
     "elif 50<=user_input1<=69:\n",
-    "    print(\"The student's score is: B\")\n",
+    "    grade=\"B\"\n",
     "elif 35<=user_input1<=49:\n",
-    "    print(\"The student's score is: C\")\n",
-    "else: 0<=user_input1<=34\n",
-    "print(\"The student's score is: D\")"
+    "    grade=\"C\"\n",
+    "elif user_input1type() is not int():\n",
+    "    print (\"Please key in a number\")\n",
+    "else: \n",
+    "    grade=\"D\"\n",
+    "print(f\"The student's letter grade is: {grade}\" ) \n"
    ]
   },
   {
