--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "5c4ba854-501c-4eed-8e52-7c953a35b844",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fd81543f-a835-46b7-af15-d9c5b12ba637",
    "metadata": {},
    "outputs": [
@@ -50,21 +50,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a1\n",
-      "c3\n",
-      "e5\n",
-      "g7\n",
-      "i9\n"
+      "['a1', 'c3', 'e5', 'g7', 'i9']\n"
      ]
     }
    ],
    "source": [
     "py_list = [\"a1\", \"b2\", \"c3\", \"d4\", \"e5\", \"f6\", \"g7\", \"h8\", \"i9\", \"j10\"]\n",
-    "print(py_list[0])   # Prints 'a1'\n",
-    "print(py_list[2])   # Prints 'c3'\n",
-    "print(py_list[4])   # Prints 'e5'\n",
-    "print(py_list[6])   # Prints 'g7'\n",
-    "print(py_list[8])   # Prints 'i9'"
+    "print(py_list[::2])"
    ]
   },
   {
@@ -77,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "8c448d71-7a4f-4995-a26e-db21abb286f8",
    "metadata": {},
    "outputs": [
@@ -86,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "Boron\n",
-      "Nitrogen\n"
+      "Boron\n"
      ]
     }
    ],
@@ -99,7 +91,7 @@
     "            'Neon']\n",
     "\n",
     "print(elements[4])\n",
-    "print(elements[-4])"
+    "print(elements[-6])"
    ]
   },
   {
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "ef470f1e-f2ff-4a3b-a785-5447a6e45406",
    "metadata": {},
    "outputs": [],
@@ -136,18 +128,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.int64(9)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
     }
    ],
    "source": [
-    "sum(np_array == 1)"
+    "print(sum(np_array == 1))"
    ]
   },
   {
@@ -160,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "id": "ced7bab5-7afb-4844-8b5d-a1973d862798",
    "metadata": {},
    "outputs": [
@@ -183,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "279fc77c-c5db-4f2c-8d40-9f1c3dd70663",
    "metadata": {},
    "outputs": [
@@ -191,14 +180,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38.5 <class 'float'>\n",
-      "302.5 <class 'float'>\n"
+      "38.5 <class 'numpy.float64'>\n",
+      "302.5 <class 'numpy.float64'>\n"
      ]
     }
    ],
    "source": [
-    "mean1=float(np.mean(np_array_1))\n",
-    "mean2=float(np.mean(np_array_2))\n",
+    "mean1=np.mean(np_array_1)\n",
+    "mean2=np.mean(np_array_2)\n",
     "\n",
     "print(mean1,type(mean1))\n",
     "print(mean2,type(mean2))\n",
