completed, rdy for review

--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 142,
    "id": "c492529f-1815-46ab-916f-375aba6d0c75",
    "metadata": {},
    "outputs": [
@@ -204,26 +204,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment1 : \t[0.19258969 0.92637022 0.6542021  0.56431649 0.51422658 0.631836\n",
-      " 0.39693043 0.26732222 0.62634093 0.02101673]\tNo.of Heads=[False  True False  True False False False False False  True]\n",
-      "Experiment2 : \t[0.77359709 0.8012206  0.31748277 0.5551843  0.72651358 0.41130098\n",
-      " 0.70669484 0.90874776 0.32335998 0.21890737]\tNo.of Heads=[False False  True False False  True  True False  True False]\n",
-      "Experiment3 : \t[0.88001184 0.2293321  0.59580445 0.76342309 0.86851989 0.75017642\n",
-      " 0.35688693 0.09457717 0.34652277 0.18858606]\tNo.of Heads=[False  True False False False  True  True False  True  True]\n",
-      "Experiment4 : \t[0.55754806 0.54841571 0.46830751 0.51806699 0.94263898 0.90347003\n",
-      " 0.52692699 0.26823723 0.39908286 0.82948807]\tNo.of Heads=[ True  True False False False False  True False  True False]\n",
-      "Experiment5 : \t[0.84032141 0.92428839 0.94759412 0.43369423 0.93329219 0.33550406\n",
-      " 0.28131716 0.12856463 0.4490059  0.64713378]\tNo.of Heads=[False  True  True  True  True  True False  True  True  True]\n",
-      "Experiment6 : \t[0.72398854 0.4099534  0.83705003 0.10006905 0.70526526 0.40901865\n",
-      " 0.29710269 0.52495274 0.61534854 0.18273221]\tNo.of Heads=[ True False False False  True  True  True False  True  True]\n",
-      "Experiment7 : \t[0.24819883 0.25263437 0.26237759 0.3252028  0.02650399 0.65021491\n",
-      " 0.15317976 0.61885253 0.96878704 0.52111928]\tNo.of Heads=[ True False False  True  True False False  True False False]\n",
-      "Experiment8 : \t[0.33160668 0.74531007 0.56566571 0.17186024 0.63329837 0.24401745\n",
-      " 0.83547734 0.63179866 0.41357824 0.88511605]\tNo.of Heads=[False False  True  True False  True False  True False  True]\n",
-      "Experiment9 : \t[0.21574922 0.18361023 0.67475036 0.68913584 0.19227689 0.21911914\n",
-      " 0.72024272 0.23889847 0.79954991 0.76015082]\tNo.of Heads=[False  True False  True False  True  True False False False]\n",
-      "Experiment10 : \t[0.68911292 0.92411707 0.67566889 0.65765295 0.77326708 0.70281495\n",
-      " 0.54230359 0.61067701 0.6044009  0.63068277]\tNo.of Heads=[ True False  True False False False False False  True  True]\n",
+      "Experiment 1:\tNo.of Heads=5\n",
+      "Experiment 2:\tNo.of Heads=4\n",
+      "Experiment 3:\tNo.of Heads=5\n",
+      "Experiment 4:\tNo.of Heads=6\n",
+      "Experiment 5:\tNo.of Heads=5\n",
+      "Experiment 6:\tNo.of Heads=6\n",
+      "Experiment 7:\tNo.of Heads=5\n",
+      "Experiment 8:\tNo.of Heads=7\n",
+      "Experiment 9:\tNo.of Heads=5\n",
+      "Experiment 10:\tNo.of Heads=5\n",
       "\n",
       "\n"
      ]
@@ -231,10 +221,9 @@
    ],
    "source": [
     "for i in range (1,11):\n",
-    "    print(f\"Experiment{i} : \", end ='\\t')\n",
+    "    print(f\"Experiment {i}:\", end ='\\t')\n",
     "    for dice in [dicerolls]:\n",
-    "        print(np.random.rand(10), end='\\t')\n",
-    "        for heads in [np.random.rand(10)>0.5]:\n",
+    "        for heads in [np.sum(np.random.rand(10)>0.5)]:\n",
     "            print(f'No.of Heads={heads}', end='\\n')\n",
     "print('\\n')\n",
     "    "
@@ -243,7 +232,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a31a73c-f1dc-475f-9875-376154d5ffce",
+   "id": "713a8041-2495-4d6e-9f70-cbbc48634add",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c5f7315-5054-4b32-9e5c-d9fccd7851fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8a0af2f-f228-4d72-b209-b26d2300f350",
    "metadata": {},
    "outputs": [],
    "source": []
