--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "id": "64d6e009-67bf-4b86-aeed-d8a2de0b4598",
    "metadata": {},
    "outputs": [],
@@ -179,8 +179,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "2ac992bc-3e31-4bee-a297-59729f138eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "369.55\n",
+      "371.14\n",
+      "373.28\n",
+      "375.8\n",
+      "377.52\n",
+      "379.8\n",
+      "381.9\n",
+      "383.79\n",
+      "385.6\n",
+      "387.43\n",
+      "389.9\n",
+      "391.65\n",
+      "393.85\n",
+      "396.52\n",
+      "398.65\n",
+      "400.83\n",
+      "404.24\n",
+      "406.55\n",
+      "408.52\n",
+      "411.44\n",
+      "414.24\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (0,len(co2_data)):\n",
+    "   print(co2_data[i][1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "51771d3a-105c-4d64-b9bf-d88887d6b6d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "414.24\n"
+     ]
+    }
+   ],
+   "source": [
+    "  print(co2_data[i-len(co2_data)][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "1c6633c0-673c-4d8c-a6fc-770ba6fcea16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2016, 404.24) 3.410000000000025\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (0,len(co2_data)):\n",
+    "  if co2_data[i][1]-co2_data[i-1][1]<3:\n",
+    "      continue\n",
+    "  print(co2_data[i],co2_data[i][1]-co2_data[i-1][1])\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ddaa205c-ff76-4213-9508-afa14c6eaa55",
+   "id": "3ee00717-b9fc-4750-bfbc-ad0aadfdc3c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65ca45e5-0c18-4b00-8daf-715a0d77d9f5",
    "metadata": {},
    "outputs": [],
    "source": []
