--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -11,7 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
+   "id": "34f88e03-66db-4c0a-91a9-83e2b892dc24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "id": "35534120-1dc7-4879-b277-0b232772f543",
    "metadata": {},
    "outputs": [
@@ -19,42 +29,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "9\n",
-      "25\n",
-      "49\n",
-      "81\n"
+      "[1, 9, 25, 49, 81]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.00013040000339969993"
+       "5.600042641162872e-06"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def oddsquares():\n",
-    "    for number in range (10):\n",
+    "    myrange=[]\n",
+    "    for number in range(10):\n",
     "        if number % 2 == 0:\n",
-    "            continue\n",
-    "        print (number**2)\n",
+    "             continue\n",
+    "        myrange.append(number**2)  \n",
+    "print(myrange)\n",
     "timeit.timeit('oddsquares()', globals=globals(), number = 1)\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "34f88e03-66db-4c0a-91a9-83e2b892dc24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -119,15 +118,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0a60c76-89ef-43e3-b821-63fe1db8fc14",
+   "execution_count": 83,
+   "id": "2ef5daa7-59dd-4b32-aeef-31e6f9793572",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "e0a60c76-89ef-43e3-b821-63fe1db8fc14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "95.0\n",
+      "90.25\n",
+      "85.7375\n",
+      "81.45062499999999\n",
+      "77.37809374999999\n",
+      "73.50918906249998\n",
+      "69.83372960937498\n",
+      "66.34204312890623\n",
+      "63.02494097246091\n",
+      "59.87369392383786\n",
+      "56.880009227645964\n",
+      "54.03600876626366\n",
+      "51.33420832795048\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "myunits=[]\n",
     "units=100\n",
     "while units>50:\n",
     "    print(units)\n",
-    "    units *= 0.95"
+    "    units *= 0.95\n",
+    "    myunits.append(units)\n",
+    "print(len(myunits))\n",
+    "\n"
    ]
   },
   {
@@ -215,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 105,
    "id": "1c6633c0-673c-4d8c-a6fc-770ba6fcea16",
    "metadata": {},
    "outputs": [
@@ -223,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016 3.410000000000025\n"
+      "2016 3.41\n"
      ]
     }
    ],
@@ -231,7 +266,7 @@
     "for i in range (0,len(co2_data)):\n",
     "  if co2_data[i][1]-co2_data[i-1][1]<3:\n",
     "      continue\n",
-    "  print(co2_data[i][0],co2_data[i][1]-co2_data[i-1][1])\n",
+    "  print(co2_data[i][0],f\"{co2_data[i][1]-co2_data[i-1][1]:.2f}\")\n",
     "    \n",
     "        "
    ]
