--- a/5.2_functions__exercises/functions_(need)_exercises.ipynb
+++ b/5.2_functions__exercises/functions_(need)_exercises.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "id": "f41ee4a0-42cf-4bef-8018-d34a274c4920",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What is your weight in kg? 80\n",
+      "What is your weight in kg? 87\n",
       "What is your height in m? 1.9\n"
      ]
     },
@@ -60,7 +60,7 @@
        "'you are of normal weight'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,6 @@
     "        return 'you are of normal weight'\n",
     "    elif 25<=BMI<=29.9:\n",
     "        return 'you are overweight'\n",
-    "    else:\n",
     "        return 'you are obese'\n",
     "calculate_bmi(BMI)\n",
     "\n",
@@ -87,16 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 43,
    "id": "3d58e521-2bfc-4933-9a43-8309e73356db",
    "metadata": {},
    "outputs": [],
    "source": [
     "def factorial(n):\n",
-    "    if n<0:\n",
+    "    if n<0 :\n",
     "        return 'Key in a valid input'\n",
     "    elif n==0 or n==1: \n",
     "        return 1\n",
+    "    elif type(n) != intn<0:\n",
+    "        return 'Key in a number'\n",
     "    else:\n",
     "        result=1\n",
     "        for number in range (1,n+1):\n",
@@ -107,29 +108,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "200bda33-34d6-4c3f-ac26-147ede4c0551",
+   "execution_count": 46,
+   "id": "14cb890a-71bf-40c0-bf6a-658712ab9752",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mfactorial\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43ma\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[43], line 2\u001b[0m, in \u001b[0;36mfactorial\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfactorial\u001b[39m(n):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mn\u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m :\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mKey in a valid input\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m n\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m n\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m1\u001b[39m: \n",
+      "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'str' and 'int'"
+     ]
     }
    ],
    "source": [
-    "factorial(5)\n"
+    "factorial('a')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41faa271-437c-403a-a5b8-1fecb0fbd8e2",
+   "id": "460e4be9-e781-4383-9b2f-8844308ea861",
    "metadata": {},
    "outputs": [],
    "source": []
