still need assistance

--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -202,35 +202,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "150b28dd-a779-4912-8821-981fda969007",
+   "execution_count": 64,
+   "id": "4dec66b6-a343-416a-8a29-7e490f95b0a2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the student's score. 86\n"
+      "Enter the student's score. 21\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Please key in a number\n",
       "The student's letter grade is: A\n"
      ]
     }
    ],
    "source": [
     "user_input1 = int(input(\"Enter the student's score.\"))\n",
-    "grade = user_input1\n",
+    "grades=user_input1\n",
     "if 70<=user_input1<=100:\n",
     "    grade=\"A\"\n",
     "elif 50<=user_input1<=69:\n",
     "    grade=\"B\"\n",
     "elif 35<=user_input1<=49:\n",
     "    grade=\"C\"\n",
-    "elif user_input1type() is not int():\n",
+    "elif type(user_input1) != int():\n",
     "    print (\"Please key in a number\")\n",
     "else: \n",
     "    grade=\"D\"\n",
