--- a/5.2_functions__exercises/functions_(good)_exercises.ipynb
+++ b/5.2_functions__exercises/functions_(good)_exercises.ipynb
@@ -163,17 +163,51 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "49779177-2c7d-46bb-9c40-e90b96ccbb9a",
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d0109b05-cc82-4b9a-b8cc-4b03ab63c5a4",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "315.15"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "convert_temperature(42,'Celsius','Kelvin')"
+    "convert_temperature(42, 'Celsius','Kelvin')  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a9fba8f3-c15a-4f1c-b062-1645220b3f2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'24.22'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_temperature(42, 'Fahrenheit', 'Celsius')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9fba8f3-c15a-4f1c-b062-1645220b3f2e",
+   "id": "64c5293e-bfac-4aca-9e83-c65bbca91df2",
    "metadata": {},
    "outputs": [],
    "source": []
